--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -25,8 +25,101 @@
                 "
     >
         <div th:replace="fragments/navigation :: navigation-with-search"></div>
-    </div>
-</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card mt-4">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table
+                                        id="table"
+                                        data-toggle="table"
+                                        data-pagination="true"
+                                        data-search="true"
+                                        data-url="users"
+                                        data-show-export="true"
+                                        data-export-types="['csv', 'excel', 'pdf']"
+                                        data-export-options='{
+                                                "fileName": "users-list",
+                                                "ignoreColumn": ["state"]
+                                            }'
+                                        data-export-headers='{
+                                                "0": "id",
+                                                "1": "email",
+                                                "2": "name",
+                                                "3": "department",
+                                                "4": "role",
+                                                "5": "projectCount"
+                                            }'
+                                >
+                                    <thead>
+                                    <tr>
+                                        <!--
+                                         private Long id;
+                                private String email;
+                                private String name;
+                                private String department;
+                                private String role;
+                                private int projectCount;-->
+                                        <th data-field="id" data-sortable="true">ID</th>
+                                        <th data-field="email" data-sortable="true">Email</th>
+                                        <th data-field="name" data-sortable="true">Name</th>
+                                        <th data-field="department" data-sortable="true">Department</th>
+                                        <th data-field="role" data-sortable="true">Role</th>
+                                        <th data-field="projectCount" data-sortable="true">Project Count</th>
+                                        <th data-field="state" data-sortable="true">State</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <!-- Data will be dynamically loaded here -->
+                                    </tbody>
+                                </table>
 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Content End -->
+</div>
+<!-- Footer Start -->
+<div th:replace="fragments/footer :: footer"></div>
+<!-- Footer End -->
+<!-- fontawesome -->
+<script src="/js/fontawesome.js"></script>
+<!-- jquery -->
+<script src="/js/jquery.3.7.1.min.js"></script>
+<!-- bootstrap -->
+<script src="/js/bootstrap.bundle.min.js"></script>
+<!-- Include Bootstrap Table, and Bootstrap Table Export JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/tableExport.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/export/bootstrap-table-export.min.js"></script>
+<script>
+    $(function () {
+        $('#table').bootstrapTable({
+            pagination: true,
+            search: true,
+            showExport: true,
+            exportTypes: ['csv', 'excel', 'pdf'],
+            exportOptions: {
+                fileName: 'users-list',
+                ignoreColumn: ['state']
+            },
+            exportHeaders: {
+                0: 'id',
+                1: 'email',
+                2: 'name',
+                3: 'department',
+                4: 'role',
+                5: 'projectCount'
+            }
+        });
+    });
+</script>
 </body>
 </html>
