--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -396,7 +396,10 @@
                                                 <h5 class="card-title">
                                                     About background
                                                 </h5>
-                                                <p class="small fst-italic" id="project-background">
+                                                <p
+                                                    class="small fst-italic"
+                                                    id="project-background"
+                                                >
                                                     Sunt est soluta temporibus
                                                     accusantium neque nam
                                                     maiores cumque temporibus.
@@ -984,6 +987,72 @@
         <!-- sort (department, project), form validation and search bar behavior are all here -->
         <script src="/js/custome.js"></script>
         <script>
+            const log = console.log;
+
+            document
+                .querySelector("#validation-form")
+                .addEventListener("submit", function (e) {
+                    e.preventDefault();
+                    log("submited");
+                    fetch("/api/project/save", {
+                        method: "POST", // Adjust the method as needed
+                        headers: {
+                            "Content-Type": "application/json",
+                        },
+                        // Define the data you want to send to the server
+                        body: JSON.stringify(
+                            // Define your data here
+                            {
+                                id: 1,
+                                name: "project name",
+                                start_date: 1698257483634,
+                                end_date: 1698257483634,
+                                user: 2,
+                                clientId: 3,
+                                background: "project background",
+                                objective: `<p>Hello World!</p><p>This is Quill <strong>full</strong>editor</p>`,
+                                amount: {
+                                    basicDesign: 0,
+                                    detailDesign: 0,
+                                    coding: 0,
+                                    unitTesting: 0,
+                                    integratedTesting: 0,
+                                },
+                                systemOutline: {
+                                    analysis: true,
+                                    sysDesign: true,
+                                    coding: false,
+                                    testing: false,
+                                    deploy: true,
+                                    maintenence: true,
+                                    document: true,
+                                },
+                                architecutre: [
+                                    "html",
+                                    "mysql",
+                                    "js",
+                                    "java",
+                                    "spring boot",
+                                ],
+                            },
+                        ),
+                    })
+                        .then((response) => {
+                            if (!response.ok) {
+                                throw new Error("Network response was not ok");
+                            }
+                            return response.json(); // Parse the response as JSON
+                        })
+                        .then((data) => {
+                            // Handle the response data here
+                            log("Request was successful. Response:", data);
+                        })
+                        .catch((error) => {
+                            // Handle any errors that occurred during the fetch
+                            log("Fetch error:", error);
+                        });
+                });
+
             class project {
                 constructor({
                     id,
@@ -997,7 +1066,7 @@
                     objective,
                     client,
                     exReview,
-                    inReview
+                    inReview,
                 }) {
                     this.id = id;
                     this.name = name;
@@ -1034,7 +1103,7 @@
                     name: "project name",
                     startDate: 1698105600000,
                     endDate: 1698710400000,
-                    pm: {id: 2, name: 'zawlinshein'},
+                    pm: { id: 2, name: "zawlinshein" },
                     background: "project background",
                     currentPhase: "basic design",
                     objective: `<p>Hello World!</p><p>This is Quill <strong>full</strong>editor</p>`,
@@ -1072,7 +1141,7 @@
                     name: "another project",
                     startDate: 1700000000000,
                     endDate: 1701000000000,
-                    pm: {id:3, name: 'phyo'},
+                    pm: { id: 3, name: "phyo" },
                     background: "another project background",
                     currentPhase: "detail design",
                     objective: `<p>Hello World!</p><p>This is Quill <strong>full</strong>editor</p>`,
@@ -1104,7 +1173,7 @@
                     name: "third project",
                     startDate: 1702000000000,
                     endDate: 1703000000000,
-                    pm: {id: 4, name: "nyo"},
+                    pm: { id: 4, name: "nyo" },
                     background: "third project background",
                     currentPhase: "coding",
                     objective: `<p>Hello World!</p><p>This is Quill <strong>full</strong>editor</p>`,
@@ -1133,7 +1202,7 @@
                 },
             ];
 
-            const motherContainer = document.querySelector('#sort-container')
+            const motherContainer = document.querySelector("#sort-container");
 
             for (let i = 0; i < proListFromBack.length; i++) {
                 currentProject = proListFromBack[i];
@@ -1203,18 +1272,20 @@
                 motherContainer.innerHTML += curDiv;
             }
 
-            const detailMoal = document.querySelector('#project-details')
+            const detailMoal = document.querySelector("#project-details");
 
-            motherContainer.addEventListener('click', function(e) {
+            motherContainer.addEventListener("click", function (e) {
                 let target = e.target;
-                if (target.hasAttribute('data-bs-target')) {
-                    let id = parseInt(target.getAttribute('id'));
-                    let targetData = proListFromBack.find(a => a.id == id)
-                    detailMoal.querySelector('.modal-title').innerText = targetData.name
-                    detailMoal.querySelector('#project-background').innerText = targetData.background
-                    detailMoal.querySelector('')
+                if (target.hasAttribute("data-bs-target")) {
+                    let id = parseInt(target.getAttribute("id"));
+                    let targetData = proListFromBack.find((a) => a.id == id);
+                    detailMoal.querySelector(".modal-title").innerText =
+                        targetData.name;
+                    detailMoal.querySelector("#project-background").innerText =
+                        targetData.background;
+                    detailMoal.querySelector("");
                 }
-            })
+            });
 
             const task = {
                 id: 1,
@@ -1223,7 +1294,7 @@
                 status: "STARTED",
                 exTime: 42,
                 acTime: 0,
-                group: A,
+                group: "A",
                 user: {
                     id: 1,
                     name: "zaw",
