--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -22,7 +22,7 @@
                 <a th:href="@{/project/all}" class="nav-item nav-link"><i class="bi bi-collection-fill me-1"></i>All
                     Projects</a>
                 <a th:href="@{/issue}" class="nav-item nav-link"><i class="fa-solid fa-triangle-exclamation"></i>Issues</a>
-                <a th:href="@{/issue}" class="nav-item nav-link"><i class="fa-solid fa-triangle-exclamation"></i>Employees</a>
+                <a th:href="@{/employees}" class="nav-item nav-link"><i class="fa-solid fa-triangle-exclamation"></i>Employees</a>
             </div>
         </nav>
     </div>
