Employee Table Fixes

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,36 +3,41 @@
 <head th:fragment="header">
     <meta charset="UTF-8">
     <title>Internal Project Management</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <meta name="keywords" content="project, management, project management, teamplaceholder project management" />
-  <meta content name="description" />
-  <meta name="author" content="teamplaceholder's project" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta name="keywords" content="project, management, project management, teamplaceholder project management"/>
+    <meta content name="description"/>
+    <meta name="author" content="teamplaceholder's project"/>
 
-  <!-- Favicon -->
-  <!-- <link href="/images/favicon.ico" rel="icon"> -->
+    <!-- Favicon -->
+    <!-- <link href="/images/favicon.ico" rel="icon"> -->
 
-  <!-- Google Web Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 
-  <!-- bootstrap icons -->
-  <link rel="stylesheet" href="/font/bootstrap-icons.min.css" />
+    <!-- bootstrap icons -->
+    <link rel="stylesheet" href="/font/bootstrap-icons.min.css"/>
 
-  <!-- Libraries Stylesheet -->
-  <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-  <link href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/lib/quill/quill.bubble.css" />
-  <link rel="stylesheet" href="/lib/quill/quill.snow.css" />
+    <!-- Libraries Stylesheet -->
+    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"/>
+    <link href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/lib/quill/quill.bubble.css"/>
+    <link rel="stylesheet" href="/lib/quill/quill.snow.css"/>
 
-  <!-- Customized Bootstrap Stylesheet -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 
-<!--  select-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <!--  select-->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 
-  <!-- Template Stylesheet -->
-  <link href="/css/style.css" rel="stylesheet" />
+    <!-- Bootstrap Tables -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.18.2/bootstrap-table.min.css"/>
+
+    <!-- Template Stylesheet -->
+    <link href="/css/style.css" rel="stylesheet"/>
 </head>
 <body>
 </body>
