--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -6,15 +6,11 @@
     <title>EMPLOYEES LIST</title>
 </head>
 <body layout:fragment="content">
-<div
-        class="container-fluid position-relative bg-white d-flex p-0"
->
+<div th:replace="fragments/sidebar :: sidebar"></div>
+<div class="container-fluid position-relative d-flex p-0">
 
-    <div th:replace="fragments/sidebar :: sidebar"></div>
     <!-- Content Start -->
-    <div
-            class="content"
-            style="
+    <div class="content" style="
                     background-color: #e5e5f7;
                     opacity: 1;
                     background-image: radial-gradient(
@@ -22,102 +18,55 @@
                         #e5e5f7 0.6000000000000001px
                     );
                     background-size: 12px 12px;
-                "
-    >
-        <div th:replace="fragments/navigation :: navigation-with-search"></div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <div class="card mt-4">
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table
-                                        id="table"
-                                        data-toggle="table"
-                                        data-pagination="true"
-                                        data-search="true"
-                                        data-url="users"
-                                        data-show-export="true"
-                                        data-export-types="['csv', 'excel', 'pdf']"
-                                        data-export-options='{
-                                                "fileName": "users-list",
-                                                "ignoreColumn": ["state"]
-                                            }'
-                                        data-export-headers='{
-                                                "0": "id",
-                                                "1": "email",
-                                                "2": "name",
-                                                "3": "department",
-                                                "4": "role",
-                                                "5": "projectCount"
-                                            }'
-                                >
-                                    <thead>
-                                    <tr>
-                                        <!--
-                                         private Long id;
-                                private String email;
-                                private String name;
-                                private String department;
-                                private String role;
-                                private int projectCount;-->
-                                        <th data-field="id" data-sortable="true">ID</th>
-                                        <th data-field="email" data-sortable="true">Email</th>
-                                        <th data-field="name" data-sortable="true">Name</th>
-                                        <th data-field="department" data-sortable="true">Department</th>
-                                        <th data-field="role" data-sortable="true">Role</th>
-                                        <th data-field="projectCount" data-sortable="true">Project Count</th>
-                                        <th data-field="state" data-sortable="true">State</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <!-- Data will be dynamically loaded here -->
-                                    </tbody>
-                                </table>
+                ">
+        <div th:replace="fragments/navigation :: navigation-without-search"></div>
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="container-fluid">
+            <table id="table"
+                   class="table bg-white table-bordered table-hover table-responsive table-light"
+                     data-toggle="table"
+                     data-pagination="true"
+                     data-search="true"
+            >
+                <thead>
+                <tr>
+                    <th data-sortable="true">ID</th>
+                    <th data-sortable="true">Email</th>
+                    <th data-sortable="true">Name</th>
+                    <th data-sortable="true">Department</th>
+                    <th data-sortable="true">Role</th>
+                    <th data-sortable="true">Project Count</th>
+                </tr>
+                </thead>
+            </table>
         </div>
+<!--        <div th:replace="fragments/footer :: aside"></div>-->
+
     </div>
     <!-- Content End -->
+
 </div>
-<!-- Footer Start -->
-<div th:replace="fragments/footer :: footer"></div>
-<!-- Footer End -->
+
+<!--    for select drop-drown-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 <!-- fontawesome -->
 <script src="/js/fontawesome.js"></script>
 <!-- jquery -->
 <script src="/js/jquery.3.7.1.min.js"></script>
 <!-- bootstrap -->
 <script src="/js/bootstrap.bundle.min.js"></script>
+<!-- Template Javascript -->
+<script src="/js/main.js"></script>
+<script src="/js/forprogresscircleiguess.js"></script>
+
+<!-- sort (department, project), form validation and search bar behavior are all here -->
+<script src="/js/custome.js"></script>
+
 <!-- Include Bootstrap Table, and Bootstrap Table Export JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/tableExport.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
 <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
-<script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/export/bootstrap-table-export.min.js"></script>
 <script>
     $(function () {
         $('#table').bootstrapTable({
-            pagination: true,
-            search: true,
-            showExport: true,
-            exportTypes: ['csv', 'excel', 'pdf'],
-            exportOptions: {
-                fileName: 'users-list',
-                ignoreColumn: ['state']
-            },
-            exportHeaders: {
-                0: 'id',
-                1: 'email',
-                2: 'name',
-                3: 'department',
-                4: 'role',
-                5: 'projectCount'
-            }
         });
     });
 </script>
