--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -23,6 +23,7 @@
                     Projects</a>
                 <a th:href="@{/employees}" class="nav-item nav-link"><i class="fa-solid fa-users-rectangle"></i>Employees</a>
                 <a th:href="@{/issue}" class="nav-item nav-link"><i class="fa-solid fa-triangle-exclamation"></i>Issues</a>
+                <a th:href="@{/register}" class="nav-item nav-link"><i class="fa-solid fa-triangle-exclamation"></i>Register</a>
 
             </div>
         </nav>
